[gd_scene load_steps=3 format=3 uid="uid://c2ymvt8kma1kk"]

[ext_resource type="Script" path="res://Enemies/enemy_spawner.gd" id="1_pbb1c"]
[ext_resource type="AudioStream" uid="uid://c1suot7t0lf6e" path="res://Sounds/enemyPoof.ogg" id="2_sjb75"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_pbb1c")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="WaveInterval" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="EnemyDefeatedSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_sjb75")
volume_db = -5.0
bus = &"SFX"

[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]
